[package]
name = "cbor_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cobs = { version = "0.4.0", features = ["serde"] }
crc = "3.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serialport = "4.7.2"
tokio = { version = "1.46.1", features = ["full"] }
