[package]
name = "cbor_test"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cobs = { version = "0.4.0", features = ["serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serialport = "4.7.2"
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "time"] }
pingpong-core = { version = "0.7.2", git = "ssh://git@github.com/li195111/pingpong-core.git" }
